--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 :root{
     --navbar-height:60px;
+
 }
 
 #navbar{
@@ -14,6 +15,7 @@
     align-items: center;
     position: sticky;
     top: 0px;
+    text-align: center;
 }
 
 #navbar::before{
